# pyclassicsorts

./: README.MD  main.py  pyproject.toml
sorts/: __init__.py  benchmarks.py
sorts/algorithms/: __init__.py  bubble.py  merge.py  quick.py  selection.py
tests/: test_algorithms.py
